[gd_scene load_steps=7 format=2]

[ext_resource path="res://Snapping/SnapScene.gd" type="Script" id=1]
[ext_resource path="res://Snapping/DrawCanvas.gd" type="Script" id=2]
[ext_resource path="res://Snapping/Floor.gd" type="Script" id=3]
[ext_resource path="res://Snapping/SObject.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 20, 0.5, 20 )

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -10, 0.25, 10, 10, 0.25, -10, 10, 0.25, 10, -10, 0.25, -10, -10, -0.25, 10, 10, -0.25, -10, 10, -0.25, 10, -10, -0.25, -10, 10, 0.25, 10, -10, 0.25, -10, 10, 0.25, -10, -10, 0.25, 10, 10, -0.25, 10, -10, -0.25, -10, 10, -0.25, -10, -10, -0.25, 10, 10, 0.25, 10, -10, -0.25, 10, -10, 0.25, 10, 10, -0.25, 10, 10, 0.25, -10, -10, -0.25, -10, -10, 0.25, -10, 10, -0.25, -10 )

[node name="Scene" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.88948, 0.456974, 0, -0.456974, 0.88948, 0, 4.46404, 8.82959 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 2 )

[node name="SObject" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.49302, 1.28062, 0 )

[node name="SObject4" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.79657, 1.28062, 3.80103 )

[node name="SObject2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07663, 1.28062, 2.22818 )
height = 1.0
width = 1.0
depth = 1.0

[node name="SObject5" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29995, 1.28062, -0.929317 )
height = 1.0
width = 1.0
depth = 1.0

[node name="SObject3" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.957163, 0, -0.28955, 0, 1, 0, 0.28955, 0, 0.957163, -0.209963, 1.28062, -4.87751 )
height = 8.0
width = 10.0
depth = 0.25

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Draw" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 2 )
[connection signal="input_event" from="Floor" to="Floor" method="_on_Floor_input_event"]
[connection signal="mouse_position_updated" from="Floor" to="." method="_on_Floor_mouse_position_updated"]
[connection signal="clicked" from="SObject" to="." method="_on_SObject_clicked"]
[connection signal="grabbed" from="SObject" to="." method="_on_SObject_grabbed"]
[connection signal="input_event" from="SObject" to="Floor" method="_on_SObject_input_event"]
[connection signal="snapped" from="SObject" to="." method="_on_SObject_snapped"]
[connection signal="clicked" from="SObject4" to="." method="_on_SObject_clicked"]
[connection signal="grabbed" from="SObject4" to="." method="_on_SObject_grabbed"]
[connection signal="input_event" from="SObject4" to="Floor" method="_on_SObject_input_event"]
[connection signal="snapped" from="SObject4" to="." method="_on_SObject_snapped"]
[connection signal="clicked" from="SObject2" to="." method="_on_SObject_clicked"]
[connection signal="grabbed" from="SObject2" to="." method="_on_SObject_grabbed"]
[connection signal="input_event" from="SObject2" to="Floor" method="_on_SObject_input_event"]
[connection signal="snapped" from="SObject2" to="." method="_on_SObject_snapped"]
[connection signal="clicked" from="SObject5" to="." method="_on_SObject_clicked"]
[connection signal="grabbed" from="SObject5" to="." method="_on_SObject_grabbed"]
[connection signal="input_event" from="SObject5" to="Floor" method="_on_SObject_input_event"]
[connection signal="snapped" from="SObject5" to="." method="_on_SObject_snapped"]
[connection signal="clicked" from="SObject3" to="." method="_on_SObject_clicked"]
[connection signal="grabbed" from="SObject3" to="." method="_on_SObject_grabbed"]
[connection signal="input_event" from="SObject3" to="Floor" method="_on_SObject_input_event"]
[connection signal="snapped" from="SObject3" to="." method="_on_SObject_snapped"]
